Fixed nav not showing on landscape orientation

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button:focus {
   border: none;
 }
 
-/* On screens that are 360px or less, set the background color to olive */
+/* Media queries for mobile and tablet */
 @media screen and (max-width: 600px) {
   .grid {
     height: 479px;
@@ -112,5 +112,12 @@ button:focus {
 
   .time {
     font-size: 77px;
+  }
+}
+
+@media screen and (max-height: 414px) and (orientation: landscape) {
+  .wrapper {
+    width: 100%;
+    height: 100%;
   }
 }
